--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/mediatekformation"
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+KEYCLOAK_APP_URL=http://localhost:8080
+KEYCLOAK_CLIENTID=MediatekFormation
+KEYCLOAK_SECRET=QmBy0QovtyhB606MdeBsczvT9vPIXhkM
